<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:contentDescription="@string/story_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/text_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">


                <EditText
                    android:id="@+id/ed_add_description"
                    style="@style/Detail.SupportingText"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:gravity="start"
                    android:hint="@string/describe_your_journey"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_card"
            app:layout_constraintStart_toStartOf="@+id/text_card"
            app:layout_constraintTop_toBottomOf="@id/text_card">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:elevation="4dp"
                android:indeterminateTint="@color/md_theme_onPrimary"
                android:visibility="gone" />

            <com.fireeemaan.journapp.ui.button.JournButton
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_your_journey" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>